--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <h4 class="sisennys-4rem"><a href="#"> HTML5 ja CSS </a></h4>
       <ol class="sisennys-8rem">
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/01_eka_harjoitus/"
+          <a href="https://github.com/Oxymoron82/01_eka_harjoitus.git"
             >Eka-harjoitus</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/02-fontti-muotoilut/"
+          <a href="https://github.com/Oxymoron82/02-fontti-muotoilut.git"
             >Fonttimuotoilut</a
           >
         </li>
@@ -46,73 +46,74 @@
         </li>
 
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/04-css-laatikkomalli/"
+          <a href="https://github.com/Oxymoron82/04-css-laatikkomalli.git"
             >CSS-laattikomalli</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/05-semanttiset-tagit/"
+          <a href="https://github.com/Oxymoron82/05-semanttiset-tagit.git"
             >Semanttiset tagit</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/06-media-query/">Media Query</a>
+          <a href="https://github.com/Oxymoron82/06-media-query.git"
+            >Media Query</a
+          >
         </li>
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/07-flex-box-malli-purettuna/"
+          <a
+            href="https://github.com/Oxymoron82/07-flex-box-malli-purettuna.git"
             >Flexbox-malli purettuna</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/08-Flexbox-harjoitus/"
+          <a href="https://github.com/Oxymoron82/08-Flexbox-harjoitus.git"
             >Flex-box harjoitus</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/09-citrus-cafe/">Citrus Cafe</a>
+          <a href="https://github.com/Oxymoron82/09-citrus-cafe.git"
+            >Citrus Cafe</a
+          >
         </li>
       </ol>
 
       <h4 class="sisennys-4rem">JavaScript-ohjelmointi></h4>
       <ol class="sisennys-8rem">
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/01_osa_javascript"
+          <a href=".https://github.com/Oxymoron82/01_osa_javascript.git"
             >01 osa javascript</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/02_osa_javascript/"
+          <a href=".https://github.com/Oxymoron82/02_osa_javascript.git"
             >02 osa javascript</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/03_osa_javascript/"
+          <a href="https://github.com/Oxymoron82/03_osa_javascript.git"
             >03 osa javascript</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/04_osa_javascript-new-/"
+          <a href="https://github.com/Oxymoron82/04_osa_javascript-new-.git"
             >04 osa javascript</a
           >
         </li>
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/05_osa_javascript/"
+          <a href="https://github.com/Oxymoron82/05_osa_javascript.git"
             >05 osa javascript</a
           >
         </li>
+
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/05_osa_javascript/"
-            >05 osa javascript</a
-          >
-        </li>
-        <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/06_osa_javascript/"
+          <a href="https://github.com/Oxymoron82/06_osa_javascript.git"
             >06 osa javascript</a
           >
         </li>
 
         <li>
-          <a href="./ohjelmointi/javascript-ohjelmointi/07_osa_javascript/"
+          <a href="https://github.com/Oxymoron82/07_osa_javascript.git"
             >07 osa javascript</a
           >
         </li>
