--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
       <h4 class="sisennys-4rem">JavaScript-ohjelmointi></h4>
       <ol class="sisennys-8rem">
         <li>
-          <a href=".https://github.com/Oxymoron82/01_osa_javascript.git"
+          <a href="https://github.com/Oxymoron82/01_osa_javascript.git"
             >01 osa javascript</a
           >
         </li>
         <li>
-          <a href=".https://github.com/Oxymoron82/02_osa_javascript.git"
+          <a href="https://github.com/Oxymoron82/02_osa_javascript.git"
             >02 osa javascript</a
           >
         </li>
@@ -120,12 +120,35 @@
       </ol>
 
       <h4 class="sisennys-4rem">C#-ohjelmointi></h4>
+      <ol class="sisennys-8rem">
+        <li>
+          <a href="https://github.com/Oxymoron82/Carrot.git"
+            >Carrot in the box</a
+          >
+        </li>
+      </ol>
+
       <h4 class="sisennys-4rem">Versionhallinta ja Git></h4>
       <h4 class="sisennys-4rem">Ohjelmointiprojekti></h4>
 
       <h3 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h3>
       <h4 class="sisennys-4rem">ASP.NET perusteet</h4>
+      <ol class="sisennys-8rem">
+        <li>
+          <a href="https://github.com/Oxymoron82/TodoApiNet24S.git"
+            >Application</a
+          >
+        </li>
+      </ol>
       <h4 class="sisennys-4rem">ASP.NET jatko</h4>
+      <ol class="sisennys-8rem">
+        <li>
+          <a href="https://github.com/Oxymoron82/WebApplication1.git"
+            >Application2</a
+          >
+        </li>
+      </ol>
+
       <h4 class="sisennys-4rem">Cloudhosting</h4>
       <h4 class="sisennys-4rem">Ohjelmistokehitysprojekti</h4>
       <h4 class="sisennys-4rem">SQL ja tietorakenteet</h4>
