--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h4 class="sisennys-4rem"><a href="#"> HTML5 ja CSS </a></h4>
       <ol class="sisennys-8rem">
         <li>
-          <a href="https://github.com/Oxymoron82/01_eka_harjoitus.git"
+          <a href="https://oxymoron82.github.io/01_eka_harjoitus/"
             >Eka-harjoitus</a
           >
         </li>
@@ -46,7 +46,7 @@
         </li>
 
         <li>
-          <a href="https://github.com/Oxymoron82/04-css-laatikkomalli.git"
+          <a href="https://oxymoron82.github.io/04-css-laatikkomalli/"
             >CSS-laattikomalli</a
           >
         </li>
