--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
           >
         </li>
         <li>
-          <a href="https://github.com/Oxymoron82/02-fontti-muotoilut.git"
+          <a href="https://oxymoron82.github.io/02-fontti-muotoilut/"
             >Fonttimuotoilut</a
           >
         </li>
 
         <li>
-          <a href="./ohjelmointi/html5_ja_css3/03-kertausharjoitus/"
+          <a href="https://oxymoron82.github.io/03-kertausharjoitus/"
             >Kertausharjoitus</a
           >
         </li>
@@ -51,43 +51,44 @@
           >
         </li>
         <li>
-          <a href="https://github.com/Oxymoron82/05-semanttiset-tagit.git"
+          <a href="https://oxymoron82.github.io/05-semanttiset-tagit/"
             >Semanttiset tagit</a
           >
         </li>
         <li>
-          <a href="https://github.com/Oxymoron82/06-media-query.git"
-            >Media Query</a
-          >
+          <a href="https://oxymoron82.github.io/06-media-query/">Media Query</a>
         </li>
         <li>
-          <a
-            href="https://github.com/Oxymoron82/07-flex-box-malli-purettuna.git"
+          <a href="https://oxymoron82.github.io/07-flex-box-malli-purettuna/"
             >Flexbox-malli purettuna</a
           >
         </li>
         <li>
-          <a href="https://github.com/Oxymoron82/08-Flexbox-harjoitus.git"
+          <a href="https://oxymoron82.github.io/08-Flexbox-harjoitus/"
             >Flex-box harjoitus</a
           >
         </li>
         <li>
-          <a href="https://github.com/Oxymoron82/09-citrus-cafe.git"
-            >Citrus Cafe</a
-          >
+          <a href="https://oxymoron82.github.io/09-citrus-cafe/">Citrus Cafe</a>
         </li>
       </ol>
 
       <h4 class="sisennys-4rem">JavaScript-ohjelmointi></h4>
       <ol class="sisennys-8rem">
         <li>
-          <a href="https://github.com/Oxymoron82/01_osa_javascript.git"
-            >01 osa javascript</a
+          <a href="https://oxymoron82.github.io/01_osa_javascript/">
+            01 osa javascript</a
           >
         </li>
         <li>
+          <a href="https://github.com/Oxymoron82/01_osa_javascript.git">
+            01 osa javascript github</a
+          >
+        </li>
+
+        <li>
           <a href="https://github.com/Oxymoron82/02_osa_javascript.git"
-            >02 osa javascript</a
+            >02 osa javascript github</a
           >
         </li>
         <li>
@@ -115,6 +116,16 @@
         <li>
           <a href="https://github.com/Oxymoron82/07_osa_javascript.git"
             >07 osa javascript</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/Oxymoron82/pannukakku-290125.git"
+            >Pannukakku tilaussivu github</a
+          >
+        </li>
+        <li>
+          <a href="https://oxymoron82.github.io/pannukakku-290125/"
+            >Pannukakku tilaussivu</a
           >
         </li>
       </ol>
