--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
             01-kurssitiedot
           </a>
         </li>
+
+        <li>
+          <a href="https://github.com/Oxymoron82/anekdootit.git">
+            anekdootit github
+          </a>
+        </li>
       </ol>
 
       <h4 class="sisennys-4rem">React-jatko</h4>
@@ -184,6 +190,30 @@
         <li>
           <a href="https://github.com/Oxymoron82/puhelinluettelo_backend.git">
             puhelinluettelo_backend
+          </a>
+        </li>
+
+        <li>
+          <a href="https://github.com/Oxymoron82/RickMorty.git">
+            Application "RickMorty" git
+          </a>
+        </li>
+
+        <li>
+          <a href="https://oxymoron82.github.io/RickMorty/">
+            Application "RickMorty"
+          </a>
+        </li>
+
+        <li>
+          <a href="https://oxymoron82.github.io/Movies/">
+            Application "Movie search"
+          </a>
+        </li>
+
+        <li>
+          <a href="https://github.com/Oxymoron82/Movies.git">
+            Application "Movie search" git
           </a>
         </li>
       </ol>
