--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
       <h4 class="sisennys-4rem">SQL ja tietorakenteet</h4>
       <h4 class="sisennys-4rem">Testauksen perusteet</h4>
       <h4 class="sisennys-4rem">UI/UX Design</h4>
+      <ol class="sisennys-8rem">
+        <li>
+          <a href="https://www.figma.com/proto/39ZB8toax36wqw4mdC1FBq/Habit-Tracker-App?node-id=9-3&t=BGQ1aURoCDYTS0pv-1">
+            Habit tracker application
+          </a>
+        </li>
       <h4 class="sisennys-4rem">Yksikkötestaus</h4>
 
       <h3 class="sisennys-2rem">
@@ -217,6 +223,26 @@
           </a>
         </li>
       </ol>
+
+      <h4 class="sisennys-4rem">Python</h4>
+      <ol class="sisennys-8rem">
+        <li>
+          <a href="https://github.com/Oxymoron82/python_phonebook.git">
+            Phonebook
+          </a>
+        </li>
+      </ol>
+
+      <h4 class="sisennys-4rem">Ohjelmistokehitysprojekti 2</h4>
+      <ol class="sisennys-8rem">
+       <li>
+          <a href="https://mariacedersten.github.io/Ohjelmistokehitysprojekti-2/">Hobblyn mobiilisovellus ja hallintapaneeli</a>
+          <a href="https://github.com/mariacedersten/Ohjelmistokehitysprojekti-2.git"
+            >Linkki GitHubiin</a
+          >
+        </li>
+      </ol>
+
     </article>
 
     <footer>
