Add practice section screenshots to portfolio

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </li>
       </ol>
 
-      <h4 class="sisennys-4rem">JavaScript-ohjelmointi></h4>
+      <h4 class="sisennys-4rem">JavaScript-ohjelmointi</h4>
       <ol class="sisennys-8rem">
         <li>
           <a href="https://oxymoron82.github.io/01_osa_javascript/">
@@ -130,7 +130,7 @@
         </li>
       </ol>
 
-      <h4 class="sisennys-4rem">C#-ohjelmointi></h4>
+      <h4 class="sisennys-4rem">C#-ohjelmointi</h4>
       <ol class="sisennys-8rem">
         <li>
           <a href="https://github.com/Oxymoron82/Carrot.git"
@@ -139,8 +139,8 @@
         </li>
       </ol>
 
-      <h4 class="sisennys-4rem">Versionhallinta ja Git></h4>
-      <h4 class="sisennys-4rem">Ohjelmointiprojekti></h4>
+      <h4 class="sisennys-4rem">Versionhallinta ja Git</h4>
+      <h4 class="sisennys-4rem">Ohjelmointiprojekti</h4>
 
       <h3 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h3>
       <h4 class="sisennys-4rem">ASP.NET perusteet</h4>
@@ -233,13 +233,48 @@
         </li>
       </ol>
 
+<h2 class="sisennys-2rem">Internship/Harjoittelu</h2>
+
+<h3 class="sisennys-2rem">Team project (GatherHub)</h3>
+
+<h4 class="sisennys-4rem">Manage Event — Basic Information screen</h4>
+
+<ol class="sisennys-8rem">
+  <li>
+    <strong>What I did:</strong>
+    Matched UI to Figma, reused Event Type selection (Venue/Online) from Create Event,
+    implemented conditional layout: Venue shows address + map, Online shows meeting link input.
+  </li>
+
+  <li>
+    <a href="PASTE_PR_LINK_HERE">Pull Request (recommended)</a>
+  </li>
+
+  <li>
+    <a href="PASTE_COMMIT_OR_FILE_LINK_HERE">Code reference (file / commit)</a>
+  </li>
+
+  <li>
+    Screenshots:
+    <figure style="margin-top: 12px;">
+      <img src="./images/practice/gatherhub-basic-event-info-venue.png" alt="Basic Event Info - Venue" style="max-width: 100%; border: 1px solid #e5e7eb; border-radius: 8px;" />
+      <figcaption>Venue: address input + map</figcaption>
+    </figure>
+
+    <figure style="margin-top: 12px;">
+      <img src="./images/practice/gatherhub-basic-event-info-online.png" alt="Basic Event Info - Online" style="max-width: 100%; border: 1px solid #e5e7eb; border-radius: 8px;" />
+      <figcaption>Online: meeting link input</figcaption>
+    </figure>
+  </li>
+</ol>
+
+
       <h4 class="sisennys-4rem">Ohjelmistokehitysprojekti 2</h4>
       <ol class="sisennys-8rem">
        <li>
           <a href="https://mariacedersten.github.io/Ohjelmistokehitysprojekti-2/">Hobblyn mobiilisovellus ja hallintapaneeli</a>
           <a href="https://github.com/mariacedersten/Ohjelmistokehitysprojekti-2.git"
-            >Linkki GitHubiin</a
-          >
+            >Linkki GitHubiin</a>
         </li>
       </ol>
 
