link to git and screenshots added

--- a/index.html
+++ b/index.html
@@ -247,25 +247,33 @@
   </li>
 
   <li>
-    <a href="PASTE_PR_LINK_HERE">Pull Request (recommended)</a>
+    <a href="https://github.com/Oxymoron82/Page-management-internship.git">Link to git repository</a>
   </li>
 
+  
   <li>
-    <a href="PASTE_COMMIT_OR_FILE_LINK_HERE">Code reference (file / commit)</a>
-  </li>
+  <p>Screenshots:</p>
 
-  <li>
-    Screenshots:
-    <figure style="margin-top: 12px;">
-      <img src="./images/practice/gatherhub-basic-event-info-venue.png" alt="Basic Event Info - Venue" style="max-width: 100%; border: 1px solid #e5e7eb; border-radius: 8px;" />
-      <figcaption>Venue: address input + map</figcaption>
+  <div class="screenshots">
+    <figure>
+      <img
+        src="./images/Surface_Offline 8.png"
+        alt="Basic Event Info – Venue"
+      />
+      <figcaption>Offline / Venue event</figcaption>
     </figure>
 
-    <figure style="margin-top: 12px;">
-      <img src="./images/practice/gatherhub-basic-event-info-online.png" alt="Basic Event Info - Online" style="max-width: 100%; border: 1px solid #e5e7eb; border-radius: 8px;" />
-      <figcaption>Online: meeting link input</figcaption>
+    <figure>
+      <img
+        src="./images/Surface_Online.png"
+        alt="Basic Event Info – Online"
+      />
+      <figcaption>Online / Virtual event</figcaption>
     </figure>
-  </li>
+  </div>
+</li>
+
+
 </ol>
 
 
